--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body{
 .container-grid{
     display:grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 105px 1fr 1fr 1fr;
     grid-template-areas: 
     "header header header"
     "about gallery gallery"
@@ -54,6 +54,7 @@ li{
     background-color: var(--background-color3);
     display:grid;
     grid-row: 2 / 4;
+    border:1px solid black;
 }
 .about-us p{
     margin:auto;
@@ -86,6 +87,14 @@ li{
     grid-row:1/3;
     
     
+}
+.about-img{
+    background-image: url('https://images.unsplash.com/photo-1510972527921-ce03766a1cf1?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTJ8fGNhZmUlMjBmb29kfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=400&q=60');
+    width: 400px;
+    height:200px;
+    background-position:center;
+    background-size:cover;
+    margin:auto;
 }
 
 .pizza{
